<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="str_email">E-mail</string>
    <string name="str_senha">Password</string>
    <string name="str_login">Log in</string>
    <string name="txt_register">Register</string>
    <string name="str_or">OR</string>
    <string name="edt_nome">Name</string>
    <string name="str_repete_senha">Repeat password</string>
    <string name="txt_registrar">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>