<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Digital House Foods"
        app:titleTextColor="@color/colorWhite"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_email"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textWebEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_senha"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/str_login"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="23dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">

                <View
                    android:layout_width="147dp"
                    android:layout_height="2dp"
                    android:background="#80A0A3A6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_or"
                    android:layout_marginHorizontal="20dp"/>

                <View
                    android:layout_width="147dp"
                    android:layout_height="1dp"
                    android:background="#80A0A3A6" />

            </LinearLayout>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="100dp"
                android:backgroundTint="@color/colorSecondary"
                android:text="@string/txt_register"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>




</LinearLayout>